project: Added pre-requisties to readme documentation for new developers to get systems up and running quickly with Grails.